# techo-cleanup

./: .env.sample  .gitignore  AGENTS.md  Pipfile  README.md  pyproject.toml
notebooks/: 01_ingesta.ipynb  04_anonimizacion.ipynb
specs/: 20260413-contexto-techo-prd-limpieza-datos.md  20260414-anonimizacion-token-hash.md  20260427-deduplicacion.md  OVERVIEW.md  dudas.md  ideas.md  prompts.md  todo.md
