[project]
name = "techo-cleanup"
version = "0.1.0"
description = "Pipeline de limpieza y gestión de datos comunitarios para TECHO Colombia"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "odfpy>=1.4",
    "pandas>=2.0",
    "jupyter>=1.0",
    "nbclick>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
